appointment_online_book, doctor_patient_account_with_email, doctor_patient_forgot_password

--- a/src/main/resources/templates/activateDeactivateUser.html
+++ b/src/main/resources/templates/activateDeactivateUser.html
@@ -141,11 +141,11 @@
                             </td>
 
                             <td>
-                                <a th:href="@{/user/update(id = ${user.id})}"><h3>Activate</h3></a>
+                                <a th:href="@{/user/activate-deactivate(id = ${user.id})}"><h3>Activate</h3></a>
 
                             </td>
                             <td>
-                                <a th:href="@{/user/remove(id = ${user.id})}"><h3>Deactivate</h3></a>
+                                <a th:href="@{/user/activate-deactivate(id = ${user.id})}"><h3>Deactivate</h3></a>
 
                             </td>
 
