--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -159,7 +159,7 @@
                                             </li>
                                             <li><a href="/medicalServices" th:text="#{index.doctor.page }">Our
                                                 Pricing</a></li>
-                                            <li><a href="/patient/register" th:text="#{index.register.page}"></a></li>
+                                            <li><a href="/patients/register" th:text="#{index.register.page}"></a></li>
                                             <li><a href="/customLogin" th:text="#{index.login.page}"></a></li>
                                             <li><a href="mail-success.html" th:text="#{index.mail.success}"></a></li>
                                         </ul>
