--- a/src/main/resources/templates/patientSinglePage.html
+++ b/src/main/resources/templates/patientSinglePage.html
@@ -261,7 +261,7 @@
         window.location.href = "/appointments/make";
     }
     function redirectToHistory() {
-        window.location.href = "/patient/appointments";
+        window.location.href = "/patients/appointments";
     }
 
     function redirectToSearchDoctor() {
