--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -217,7 +217,7 @@
                         <h2>Register Here</h2>
                         <p>Already have an account ? <a href="login.html">Login Here</a></p>
 
-                        <form class="form" method="post" action="/patient/register" enctype="multipart/form-data" th:object="${patient}">
+                        <form class="form" method="post" action="/patients/register" enctype="multipart/form-data" th:object="${patient}">
                             <div class="row">
                                 <div class="col-lg-6">
                                     <div class="form-group">
