--- a/one-health-mvc/src/main/resources/templates/onlinePayments.html
+++ b/one-health-mvc/src/main/resources/templates/onlinePayments.html
@@ -1,7 +1,7 @@
-
 <!doctype html>
-<html class="no-js" lang="zxx" xmlns:th="http://www.thymeleaf.org">
+<html class="no-js" lang="zxx">
 <head>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="keywords" content="Site keywords here">
@@ -27,30 +27,16 @@
     <link rel="stylesheet" href="/css/slicknav.min.css">
 
     <link rel="stylesheet" href="/css/owl-carousel.css">
-
     <link rel="stylesheet" href="/css/datepicker.css">
-
     <link rel="stylesheet" href="/css/animate.min.css">
-
     <link rel="stylesheet" href="/css/magnific-popup.css">
-
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/responsive.css">
-
     <link rel="stylesheet" href="/css/color/color1.css">
     <link rel="stylesheet" href="#" id="colors">
-    <style>
-        .active{
-            color: red;
-            font-size: 20px;
-        }
-        .pagination{
-            display: flex;
-            flex-direction: row;
-        }
-    </style>
-</head>
+
+
 <body>
 
 <div class="preloader">
@@ -84,31 +70,30 @@
     <span class="color11"></span>
     <span class="color12"></span>
 </div>
-
-
 <div class="breadcrumbs overlay">
     <div class="container">
         <div class="bread-inner">
             <div class="row">
                 <div class="col-12">
-                    <h2>Department</h2>
+                    <h2>Online Payments</h2>
                     <ul class="bread-list">
                         <li><i class="icofont-simple-right"></i></li>
-                        <li class="active">Department</li>
+                        <li class="active">Online Payments</li>
                     </ul>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+
 <section class="doctor-calendar-area section">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
                 <div class="section-title">
-                    <h2>Our Department</h2>
+                    <h2>Medical Service</h2>
                     <img src="/img/section-img.png" alt="#">
-                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit praesent aliquet. pretiumts</p>
                 </div>
             </div>
         </div>
@@ -118,64 +103,34 @@
                     <table class="table">
                         <thead>
                         <tr>
-                            <th>id</th>
-                            <th>department</th>
-                            <th>Update</th>
-                            <th>Delete</th>
+                            <th>Name</th>
+                            <th>Price</th>
+                            <th>To Cart</th>
                         </tr>
                         </thead>
                         <tbody>
-                        <tr th:each="department: ${departments.content}">
+                        <tr th:each="med: ${medServ}">
                             <td>
-                                <h3 th:text="${department.id}"></h3>
+                                <h3 th:text="${med.getName()}"></h3>
                             </td>
                             <td>
-                                <h3 th:text="${department.departments}"></h3>
-                            </td>
-
-                            <td>
-                                <a th:href="@{/departments/edit-page(id = ${department.id})}"><h3>Update</h3></a>
-
+                                <h3 th:text="${med.getPrice()}"></h3>
                             </td>
                             <td>
-                                <a th:href="@{/departments/remove(id = ${department.id})}"><h3>Remove</h3></a>
+                                <a th:href="@{/cart/add(medicalId=${med.id})}">
+                                    <h3>to cart</h3>
+                                </a>
                             </td>
                         </tr>
                         </tbody>
                     </table>
-                    <div class="pagination">
-                        <div th:if="${departments.totalPages> 0}"
-                             th:each="pageNumber : ${pageNumbers}">
-                            <a th:href="@{/departments/open-page(size=${departments.size}, page=${pageNumber})}"
-                               th:text="${pageNumber}"
-                               th:class="${pageNumber==departments.number + 1} ? active"></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<section class="newsletter section">
-    <div class="container">
-        <div class="row ">
-            <div class="col-lg-6  col-12">
-
-                <div class="subscribe-text ">
-                    <h6>Sign up for newsletter</h6>
-                    <p class="">Cu qui soleat partiendo urbanitas. Eum aperiri indoctum eu,<br> homero alterum.</p>
-                </div>
-            </div>
-            <div class="col-lg-6  col-12">
-
-                <div class="subscribe-form ">
-                    <a th:href="@{/departments/page-to-add}" class="btn">Add Department</a>
                 </div>
             </div>
         </div>
     </div>
 </section>
 <footer id="footer" class="footer ">
+
     <div class="footer-top">
         <div class="container">
             <div class="row">
@@ -192,6 +147,7 @@
                             <li><a href="#"><i class="icofont-vimeo"></i></a></li>
                             <li><a href="#"><i class="icofont-pinterest"></i></a></li>
                         </ul>
+
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-12">
