add comments and aspect and mvc changes

--- a/one-health-mvc/src/main/resources/templates/admin.html
+++ b/one-health-mvc/src/main/resources/templates/admin.html
@@ -121,7 +121,7 @@
                             <p><a href="/doctor"></a></p>
                         </div>
                     </div>
-                </div>
+                </div><br><br>
 
                 <div class="col-lg-4 col-12 ">
                     <div class="single-info" onclick="activateDeactivateUser()">
@@ -144,6 +144,7 @@
 
                 </div>
                 <div class="col-lg-4 col-12">
+                    <br>
                     <div class="single-info" onclick="redirectToDepartment()">
                         <i class="icofont icofont-wall-clock"></i>
                         <div class="content">
@@ -153,8 +154,8 @@
                 </div>
 
 
-                <div class="col-lg-4 col-12 ">
-                    <div class="single-info" onclick="redirectToMedicalServices()">
+                <div  class="col-lg-4 col-12 ">
+                    <div style="margin-top: 15px" class="single-info" onclick="redirectToMedicalServices()">
                         <i class="icofont icofont-wall-clock"></i>
                         <div class="content">
                             <h3>Medical Services</h3>
@@ -162,7 +163,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-12 "  onclick="redirectToSearchDoctor()">
-                    <br><br>
+                    <br>
                     <div class="single-info" >
                         <i class="icofont icofont-wall-clock"></i>
                         <div class="content">
