--- a/one-health-mvc/src/main/resources/templates/appointmentFailedView.html
+++ b/one-health-mvc/src/main/resources/templates/appointmentFailedView.html
@@ -110,7 +110,7 @@
                     <p>We apologize for the inconvenience, but the doctor is currently unavailable or the medical center
                         is closed during the selected time. Please consider rescheduling your appointment for a more
                         suitable slot.</p>
-                    <a href="/patient/singlePage" class="btn">Go Home</a>
+                    <a href="/patients/singlePage" class="btn">Go Home</a>
                 </div>
 
             </div>
